--- a/page/爱情故事汇总.md
+++ b/page/爱情故事汇总.md
@@ -48,3 +48,121 @@
 > 
 > 她们的要求被允诺了，接着，城堡的大门打开了。女人们走了出来—城堡外所有的人都大吃一惊。她们手里拿的不是金子，也不是珠宝。每个女人的腰都弯得低低的，实在是不堪双手抱着的她们的男人的重负。她们要救出自己的男人，不能让自己的男人受到这支胜利的军队的报复。康纳德这位慷慨而仁慈的国王据说被这一壮举感动得流下了眼泪。他立即就答应了这些女人，保证他们的丈夫是完全的安全与自由。接着，国王邀请所有的人参加宴会，并与巴伐利亚公爵签订了和平条约。
 
+####晚点遇到你，余生都是你
+>人生的出场顺序很重要，早一步和晚一步，结局会是大相径庭。
+>
+>而我遇到你，刚刚好。
+>
+>这世间最美好的事情，莫过于你喜欢的人也刚好爱着你。
+
+```
+作者：顾一宸
+
+-1-
+
+你累了吧？
+
+一个人走了那么久，才终于遇见我。那些没有我的日子，一个人撑得并不容易，对吗？
+
+有人说，你的生命里会有一个人，他的出现，会让你之前的等待都变得值得，你要相信，总有那么一个人，而他没来之前，你要等。
+
+原谅我那么迟钝，认识你其实蛮久的了，却在很长一段时间里浑然不觉，丝毫没有意识到，原来，我就是你要等的那个人。
+
+不知道你年少的时候有没有做过和紫霞仙子一样的梦，幻想着你的意中人是一位盖世英雄，有一天他会身披金甲圣衣、脚踩七彩祥云来娶你。
+
+抱歉啊，我没有金甲圣衣，也踩不上七彩祥云，可我是真的想娶你。
+
+钱钟书在说到他和杨绛的婚姻时说：“我见到她之前，从未想到要结婚；我娶了她几十年，从未后悔娶她；也未想过要娶别的女人。”
+
+我也一样啊。
+
+我其实是一个生性散漫热爱自由的人，不喜欢被束缚，向往着随性洒脱的生活。我一直以为自己会在三十岁之后才考虑结婚的事情，可遇到你之后，尤其是见了你之后，我突然就想娶你了，特别想。
+
+那种感觉，怎么说呢，就好像倦鸟归巢，又好像游鱼归海。原以为自己已经习惯了漂泊，习惯了孤单，后来才发现，原来那些都不过是假象，我只是还没有找到可以停靠的岸罢了。
+
+而你，就是我的岸。
+
+我想上岸了。
+
+-2-
+
+认识你有一年多了，喜欢你也有半年了。
+
+我就像一颗小星球，和你在空寂的宇宙里相逢，隔着遥远的路途，我笑了笑，对你说“嗨”，你转过头，“哎”地应了我一声。
+
+我们一起往宇宙深处飞去，一路上聊着天。我越来越喜欢听你说话，就忍不住凑过去侧着耳朵仔细听。我偏离了原本的轨道，离你越来越近。
+
+有一天，我恍然惊醒，发现我怎么离你那么近了，我想退后几步，离你稍微远一点，因为我已经察觉到你身上散发着对我来说致命的吸引力。这对我来说不可控，很危险。
+
+我努力往外挣了一挣，纹丝不动。我再使劲，还是挣不脱。
+
+哎，被你俘获了，逃不开了啊，宝宝。
+
+-3-
+
+在确知我对你的心意之后，我把自己的心像粽子一样包裹了起来。
+
+我不敢跟你说太多话，怕这些话从心里钻出来后，变了样子，变成了“我爱你”的形状。但我又不能不跟你说话，因为我想你，很想很想，想看你的消息，想听你的声音。
+
+爱一个人是藏不住的吧，即便我捂住了嘴巴，爱意还是会从眼睛从鼻子从身上的每一个毛孔散发出来，飘向你的吧。
+
+那在此之前，就让我多藏一会儿吧。这让我感到安全。
+
+这世界上，有人偷偷爱着你。
+
+可惜，你不知道。
+
+也幸好，你不知道。
+
+-4-
+
+我是多么绝望而卑微地爱着你。
+
+雨果说，真爱的第一征兆，在男孩身上是胆怯，在女孩身上是大胆。我真的爱你啊，所以，我也是真的胆怯啊。
+
+你在我眼里光芒万丈，而我在你的光芒里投下了一地的阴影，逆着你的光，我看回去，你像个小仙女一样，那么美好，那么可爱。
+
+那段时间，我经常念叨着一句话，所爱隔山海，山海不可平。咱俩隔得远啊，2500公里，横跨了大半个中国。吹过你的海风裹挟着的咸湿的水汽飘上云层，得过好多好多天才能飘到我的头顶，落下来，哭成一滴雨。
+
+2500公里，并不是最遥远的距离。世界上最遥远的距离，不是我就站在你面前，你却不知道我爱你，而是爱到痴迷，却不能说我爱你。
+
+我以为你是不会喜欢我的。那样的话，我表白心意，又有何意义？不过是给你徒增烦恼罢了。而我，不愿意成为你的烦恼，我只想成为你的惦念，你的牵挂，你的割舍不下。
+
+我想，就这样吧，就让时间和距离犹如磨盘一样碾压过我的心，把我对你的爱消磨殆尽。从我爱上你，到我放下你，也许要很久很久，比很久还要久。不过，一辈子那么长，我有的是时间，把你慢慢遗忘。
+
+所以，我知道你也喜欢我的时候，我有多高兴，你能想象吗？
+
+你不能。
+
+我高兴得一整晚睡不着觉，简直是做梦都会笑醒。这世上还有什么事能比你偷偷喜欢的人也正好喜欢着你更让人高兴的呢？没有了吧。
+
+我这颗死寂的星球刹那间焕发生机，被旺盛的热情点燃，璨若流星，一路狂奔，想要触摸你的指尖，贴着了你的温暖。
+
+原来，我不怕路途遥远，不怕翻山越岭，我只怕越过山丘却发现无人等候。
+
+多好，你在等我，那么，我俩的幸福，就都有了归途。
+
+-5-
+
+在这个爱情成了快消品的时代，有多少异地恋输给了距离，败给了流年。
+
+我俩倒好，不仅是异地恋，还是网恋。
+
+在旁人的眼里，这段感情是前途堪忧吧，是命途多舛吧。
+
+这其中有多艰难，其实你我都知道的。可我们更知道彼此的心意。相隔万水千山又如何，若真是喜欢，跋山涉水、翻山越岭又有何难？
+
+这是一条极其遥远的路，你本有更容易的方向，可是你没有转身，没有后退，只是向着我，走过来。
+
+我满心欢喜，又不无感激。
+
+你真是个好姑娘啊！
+
+我该做点什么，才能和你这好姑娘相依相偎在余生里呢？
+
+唯有爱吧，用心去爱，呵护你，守护爱。
+
+晚点遇到你，原来你也在这里。
+
+余生都是你，咱俩就一直爱下去。 -END-
+```
