--- a/page/学习计划.md
+++ b/page/学习计划.md
@@ -4,10 +4,15 @@
 >
 >The difficulty for the head, it is difficult to make stone; step on the foot, it is a stepping stone.
 >把困难举在头上，它就是灭顶石；把困难踩在脚下，它就是垫脚石。
-
+>
+>希望自己将努力常态化
 ####6.22---6.24
 - 1.动态代理
 - 2.cglib代理
 - 3.NIO如何实现多路复用
 - 4.枚举、泛型
 - 5.Builder结尾，便是运用了建造者模式
+####6.25---7.01
+- ActiveMQ
+- Redis
+- 适配器模式
