--- a/page/爱情故事汇总.md
+++ b/page/爱情故事汇总.md
@@ -166,3 +166,92 @@
 
 余生都是你，咱俩就一直爱下去。 -END-
 ```
+
+
+##我是我自己 
+
+我就是我。
+在这个世界上，没有一个人完全像我。
+有一些人某些部分像我，
+
+但没有一个人完全和我一模一样。
+所以，一切出自于我的
+
+都真真实实属于我，因为那是我个人的选择。
+我拥有我的一切：
+我的身体，以及一切它的举动；
+我的思想，以及所有的想法和意念；
+我的眼睛，以及一切看到的影像；
+我的感受，不论是什么，
+
+愤怒、
+
+喜乐、
+
+挫折、
+
+爱、
+
+失望、
+
+兴奋；
+我的嘴巴，和一切从口中所出的话语，
+
+温文有礼的，
+
+甜蜜的或粗鲁的，
+
+对的或不对的；
+我的声音，喧嚷的或轻柔的；
+还有我所有的行动，不论是对别人或对自己的。
+我拥有我的幻想、我的梦想、我的希望和我的恐惧。
+我拥有我所有的胜利与成功、所有的失败与错误。
+因为我拥有全部的我，
+
+我可以和自己成为亲密熟悉的朋友。
+由于我能如此，
+
+所以我能爱自己，
+
+并且能够友善地和我的每一部分友善相处。
+那么，我就可以使我整个人的运作状态，
+
+带给自己最大的幸福。
+我知道自己有些地方让我困惑，
+
+也有别的部分是我也不明白的。
+不过，只要我友善地爱我自己，
+
+我就能勇敢地、满怀希望地寻求途径来解决这些困惑，
+
+并且寻求方法来更了解自己。
+然而，不论我在任何时刻，
+
+看起来、听起来如何，
+
+不论我说什么、做什么，
+
+或想什么、感受什么，
+
+这都是我。
+
+这是真实的，而且代表了那个时刻我的状况。
+稍后当我回想当时我是如何看起来、听起来的样子，
+
+自己所说的话和做过的事，还有自己的想法和感受，
+
+有些可能已不再合适了。
+
+我能够摒弃那些不再合适的，
+
+而保留那些经过证明后合适的，
+
+并且再创造一些新的来取代被我摒弃的那些。
+我可以看、听、感受、思考、说话和做事。
+我有办法养活自己、与别人亲近和有效地工作，
+
+并且能够使我周围的人事物呈现出意义和秩序。
+我拥有我自己，
+
+所以我能掌管我自己。
+我就是我自己，而且我很好。
